--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -18,3 +18,12 @@ jobs:
       - name: print-to-screen
         run: echo "Hello World ${{ secrets.MY_NAME }}!"
 
+      - name: The job has succeeded
+        if: ${{ success() }}
+        run: echo "Job Succeded!!!"
+
+
+      - name: The job has failed
+        if: ${{ failure() }}
+        run: echo "Job Fails :("
+
