--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
         # file: ./path-to-dockerfile
         tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
         build-args: |
-          APP_ENV="${{ secret.APP_ENV }}"
+          APP_ENV=${{ secrets.APP_ENV }}
 
     # - uses: "marvinpinto/action-automatic-releases@latest"
     #   name: Release
