--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,46 +2,64 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "stage" ]
+    branches: ["stage"]
+    tags:
+      - '*'
 
 env:
   REGISTRY: cachac
   IMAGE_NAME: kubelabs_publicapi_test
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3 # checkout github code
-      name: Checkout code
+      - uses: actions/checkout@v3 # checkout github code
+        name: Checkout code
+
+      - name: Set TAG version
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Test
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
+
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # - name: Build & Push
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     push: true
+      #     # file: ./path-to-dockerfile
+      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+      #     build-args: |
+      #       APP_ENV=${{ secrets.APP_ENV }}
 
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build & Push
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        # file: ./path-to-dockerfile
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-        build-args: |
-          APP_ENV=${{ secrets.APP_ENV }}
 
-    # - uses: "marvinpinto/action-automatic-releases@latest"
+
+
+
+    # DOCKER RUN to test container
+    # - name: Build the Docker image
+    #   run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
+
+
+
+
+
+
+# EXTRA
+# - uses: "marvinpinto/action-automatic-releases@latest"
     #   name: Release
     #   with:
     #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
     #     automatic_release_tag: ${{ env.VERSION }}
     #     title: ${{ env.RELEASE }}
     #     prerelease: false
-
-    - name: Build the Docker image
-      run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
-
