--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,8 @@ jobs:
 
       - name: Set TAG version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
+
+      - name: Test (delete me)
         run: |
           echo $RELEASE_VERSION
           echo ${{ env.RELEASE_VERSION }}
