--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,13 +18,11 @@ jobs:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
 
-      - name: Set TAG version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
-      - name: Test (delete me)
+      - name: Get TAG version
         run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "New tag version: ${{ env.RELEASE_VERSION }}"
+
 
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
