--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,20 +24,20 @@ jobs:
       - name: Echo New Tag Version
         run:  echo ${{ env.RELEASE_VERSION }}
 
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Build & Push
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     # file: ./path-to-dockerfile
-      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-      #     build-args: |
-      #       APP_ENV=${{ secrets.APP_ENV }}
+      - name: Build & Push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          # file: ./path-to-dockerfile
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
+          build-args: |
+            APP_ENV=${{ secrets.APP_ENV }}
 
 
 
