--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,8 +3,8 @@ name: Docker Image CI
 on:
   push:
     branches: ["stage"]
-    tags:
-      - '*'
+    # tags:
+    #   - '*'
 
 env:
   REGISTRY: cachac
