--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/${{ env.BRANCH }}'
+    if: github.ref == 'refs/heads/stage'
 
     steps:
       - uses: actions/checkout@v3 # checkout github code
