--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,11 +13,16 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/stage'
+    # if: github.ref == 'refs/heads/stage'
 
     steps:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
+
+      - name: GitHub Tag Name example
+        run: |
+          echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
 
       - name: Get TAG version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
@@ -25,20 +30,20 @@ jobs:
       - name: Echo New Tag Version
         run:  echo ${{ env.RELEASE_VERSION }}
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build & Push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          # file: ./path-to-dockerfile
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
-          build-args: |
-            APP_ENV=${{ secrets.APP_ENV }}
+      # - name: Build & Push
+      #   uses: docker/build-push-action@v3
+      #   with:
+      #     push: true
+      #     # file: ./path-to-dockerfile
+      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
+      #     build-args: |
+      #       APP_ENV=${{ secrets.APP_ENV }}
 
 
 
