git hub actions tag version

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    # branches: ["stage"]
-    tags:
-      - '*'
+    branches: ["stage"]
+    # tags:
+    #   - '*'
 
 env:
   REGISTRY: cachac
