--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,16 +19,13 @@ jobs:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
 
-      - name: GitHub Tag Name example
+      - name: GitHub Tag Name
         run: |
           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
-          echo "Tag name from github.ref_name: ${{  github.ref_name }}"
 
-      - name: Get TAG version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
-      - name: Echo New Tag Version
-        run:  echo ${{ env.RELEASE_VERSION }}
+      - name: GitHub branch
+        run: |
+          echo "Tag name from GITHUB_REF_NAME: $github.ref"
 
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
@@ -41,7 +38,7 @@ jobs:
       #   with:
       #     push: true
       #     # file: ./path-to-dockerfile
-      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
+      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ GITHUB_REF_NAME }}
       #     build-args: |
       #       APP_ENV=${{ secrets.APP_ENV }}
 
