--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: GitHub branch
         run: |
-          echo "Tag name from GITHUB_REF_NAME: $github.ref"
+          echo "branch: ${{github}}"
 
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
