--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,9 +22,12 @@ jobs:
       - name: Get current branch
         run: |
           TAG=$(git tag | sort -V | tail -1)
+          echo "Branch is $TAG."
           echo "::set-output name=TAG::$TAG"
           echo "Branch is $TAG."
 
+
+# git rev-parse --short HEAD
 
       # - name: Login to DockerHub
       #   uses: docker/login-action@v2
