--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,9 @@ jobs:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
 
+      - name: Echo New Tag Version
+        run:  ls -la
+
       - name: Get TAG version
         run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
 
