--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,9 @@ jobs:
       - name: Echo New Tag Version
         run:  ls -la
 
+      - name: Echo New Tag Version
+        run:  git tag 
+
       - name: Get TAG version
         run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
 
