--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,60 +18,36 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Get TAG version
-      #   run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
+      - name: Get TAG version
+        run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
 
-      # - name: Echo New Tag Version
-      #   run:  echo ${{ env.RELEASE_VERSION }}
+      - name: Echo New Tag Version
+        run: echo ${{ env.RELEASE_VERSION }}
 
-      - name: Get latest Tag
-        run: |
-          echo "TAG=$(git tag | sort -V | tail -1)"
-          echo "Branch is $TAG"
-          echo "::set-output name=TAG::$TAG"
-          echo "OUTPUT Branch is $TAG."
+# - name: Login to DockerHub
+#   uses: docker/login-action@v2
+#   with:
+#     username: ${{ secrets.DOCKER_USERNAME }}
+#     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Echo New Tag Version1
-        run:  echo ${{ env.TAG }}
+# - name: Build & Push
+#   uses: docker/build-push-action@v3
+#   with:
+#     push: true
+#     # file: ./path-to-dockerfile
+#     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ GITHUB_REF_NAME }}
+#     build-args: |
+#       APP_ENV=${{ secrets.APP_ENV }}
 
-      - name: Echo New Tag Version2
-        run:  echo $TAG"
-
-# git rev-parse --short HEAD
-
-      # - name: Login to DockerHub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # - name: Build & Push
-      #   uses: docker/build-push-action@v3
-      #   with:
-      #     push: true
-      #     # file: ./path-to-dockerfile
-      #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ GITHUB_REF_NAME }}
-      #     build-args: |
-      #       APP_ENV=${{ secrets.APP_ENV }}
-
-
-
-
-
-    # DOCKER RUN to test container
-    # - name: Build the Docker image
-    #   run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
-
-
-
-
-
+# DOCKER RUN to test container
+# - name: Build the Docker image
+#   run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
 
 # EXTRA
 # - uses: "marvinpinto/action-automatic-releases@latest"
-    #   name: Release
-    #   with:
-    #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-    #     automatic_release_tag: ${{ env.VERSION }}
-    #     title: ${{ env.RELEASE }}
-    #     prerelease: false
+#   name: Release
+#   with:
+#     repo_token: "${{ secrets.GITHUB_TOKEN }}"
+#     automatic_release_tag: ${{ env.VERSION }}
+#     title: ${{ env.RELEASE }}
+#     prerelease: false
