--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Get TAG version
         run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
 
-      - name: Echo New Tag Version
+      - name: New Tag Version
         run: echo ${{ env.RELEASE_VERSION }}
 
 # - name: Login to DockerHub
@@ -51,3 +51,4 @@ jobs:
 #     automatic_release_tag: ${{ env.VERSION }}
 #     title: ${{ env.RELEASE }}
 #     prerelease: false
+
