--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    outputs:
+      RELEASE_VERSION: ${{ steps.tagVersion.outputs.RELEASE_VERSION }}
+
     steps:
       - uses: actions/checkout@v3 # checkout github code
         name: Checkout code
@@ -19,36 +22,49 @@ jobs:
           fetch-depth: 0
 
       - name: Get TAG version
+        id: tagVersion
         run: echo "RELEASE_VERSION=$(git tag | sort -V | tail -1)" >> $GITHUB_ENV
 
       - name: New Tag Version
-        run: echo ${{ env.RELEASE_VERSION }}
+        run: |
+          echo ${{ env.RELEASE_VERSION }}
+          echo "::set-output name=RELEASE_VERSION::hello"
 
-# - name: Login to DockerHub
-#   uses: docker/login-action@v2
-#   with:
-#     username: ${{ secrets.DOCKER_USERNAME }}
-#     password: ${{ secrets.DOCKER_PASSWORD }}
+  # - name: Login to DockerHub
+  #   uses: docker/login-action@v2
+  #   with:
+  #     username: ${{ secrets.DOCKER_USERNAME }}
+  #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-# - name: Build & Push
-#   uses: docker/build-push-action@v3
-#   with:
-#     push: true
-#     # file: ./path-to-dockerfile
-#     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ GITHUB_REF_NAME }}
-#     build-args: |
-#       APP_ENV=${{ secrets.APP_ENV }}
+  # - name: Build & Push
+  #   uses: docker/build-push-action@v3
+  #   with:
+  #     push: true
+  #     # file: ./path-to-dockerfile
+  #     tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ GITHUB_REF_NAME }}
+  #     build-args: |
+  #       APP_ENV=${{ secrets.APP_ENV }}
 
-# DOCKER RUN to test container
-# - name: Build the Docker image
-#   run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
+  # DOCKER RUN to test container
+  # - name: Build the Docker image
+  #   run: docker run --rm --name api -p 3000:3000 cachac/kubelabs_publicapi_test
 
-# EXTRA
-# - uses: "marvinpinto/action-automatic-releases@latest"
-#   name: Release
-#   with:
-#     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-#     automatic_release_tag: ${{ env.VERSION }}
-#     title: ${{ env.RELEASE }}
-#     prerelease: false
+  # EXTRA
+  # - uses: "marvinpinto/action-automatic-releases@latest"
+  #   name: Release
+  #   with:
+  #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
+  #     automatic_release_tag: ${{ env.VERSION }}
+  #     title: ${{ env.RELEASE }}
+  #     prerelease: false
 
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    # - name: Check out code
+    #   uses: actions/checkout@v2
+      - name: New Tag Version
+        run: echo ${{ needs.build.outputs.RELEASE_VERSION }}
