--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,14 +65,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
+    env:
+      VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
+
     steps:
       - uses: actions/checkout@v2
         with:
           repository: ${{ env.DEPLOY_REPO }}
           token: ${{ secrets.DEPLOY_TOKEN }}
-
-      - name: New Tag Version
-        run: echo ${{ needs.build.outputs.RELEASE_VERSION }}
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
@@ -80,28 +80,18 @@ jobs:
           kustomize-version: "3.6.1"
 
       - name: Update Kubernetes resources
-        env:
-          VERSION: ${{ needs.build.outputs.RELEASE_VERSION }}
-
         run: |
-          # echo "Cloning deploy CD Repo"
-
-          ls
-          echo "${{ env.VERSION }}"
-
           cd public-api/overlays/stage
           kustomize edit set image KUSTOMIZE-DEFINED=${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
 
           # Optional: check yaml files Kustomized
           kustomize build . > kustomized-apps.yml
-
-          cat kustomization.yaml
           cat kustomized-apps.yml
 
       - name: Commit files
         run: |
           git config --local user.email "deploy-bot@stotylabs.dev"
           git config --local user.name "Storylabs deploy-Bot"
-          git commit -am "new image version, branch: staging, tag: ${{ env.VERSION }}"
+          git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
           git push --force origin
 
