--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -72,7 +72,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: ${{ env.DEPLOY_REPO }}
-          token: ${{ secrets.DEPLOY_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_TOKEN }}
           
           
 
