--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -74,10 +74,6 @@ jobs:
           repository: ${{ env.DEPLOY_REPO }}
           ssh-key: ${{ secrets.DEPLOY_TOKEN }}
 
-
-
-          
-
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
         with:
@@ -96,5 +92,6 @@ jobs:
         run: |
           git config --local user.email "deploy-bot@stotylabs.dev"
           git config --local user.name "Storylabs deploy-Bot"
+          git add .
           git commit -am "New image version, branch: staging, tag: ${{ env.VERSION }}"
           git push --force origin
