--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,30 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- main
+  - main
+  
+resources:
+  - repo: self
 
-pool:
-  vmImage: ubuntu-latest
+variables:
+  tag: '$(Build.BuildId)'
+  imageName: 'public-api'
+  vmImageName: ubuntu-latest
+  
+stages: # jobs GA
+  - stage: Build
+    displayName: Build Image
+    jobs:   # steps GA
+      - job: Build
+        displayName: Build
+        pool:
+          vmImage: $(vmImageName)
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+        steps:
+          - task: Docker@2
+            displayName: Build an image
+            inputs:
+              repository: $(imageName)
+              command: build
+              dockerfile: '**/qa.dockerfile'
+              tags: |
+                $(tag)
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
