--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,16 @@ resources:
   - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
-  imageName: 'public-api'
-  vmImageName: ubuntu-latest
+  - group: CICD
+  - name: app_var
+    value: $[variables.appVariable]
+
+parameters:
+  - name: tag
+    default: '$(Build.BuildId)'
+
+  - name: imageName
+    default: 'public-api'
 
 stages: # jobs GA
   - stage: Build
@@ -19,12 +26,15 @@ stages: # jobs GA
         displayName: Build
         
         steps:
+          - script: |
+              echo "var=$(app_var)"
+
           - task: Docker@2
             displayName: Build an image
             inputs:
-              repository: $(imageName)
+              repository: ${{ parameters.imageName }}
               command: build
               dockerfile: '**/qa.dockerfile'
-              tags: |
-                $(tag)
+              tags: ${{ parameters.tag }}
+              arguments:  '--build-arg APP_ENV=$(app_var)'
 
