--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,5 +36,5 @@ stages: # jobs GA
               command: build
               dockerfile: '**/qa.dockerfile'
               tags: ${{ parameters.tag }}
-              arguments:  '--build-arg APP_ENV=$(app_var)'
+              arguments:  '--build-arg APP_ENV=${{ app_var }}'
 
