--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,13 +34,13 @@ stages: # jobs GA
             inputs:
               repository: ${{ parameters.imageName }}
               command: build
-              containerRegistry: 'registryConnection'                         <------------------------------ repository service connection
+              containerRegistry: 'registryConnection'   
               dockerfile: '**/qa.dockerfile'
               tags: | 
                 ${{ parameters.tag }}
               arguments:  '--build-arg APP_ENV="$(app_var)"'
 
-          - task: Docker@2                                                    <------------------------------ push task
+          - task: Docker@2
             displayName: 'Push Docker Image'
             inputs:
               command: 'push'
