--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ stages: # jobs GA
               dockerfile: '**/qa.dockerfile'
               tags: | 
                 ${{ parameters.tag }}
-              arguments:  '--build-arg APP_ENV="$(app_var)"'
+              arguments:  '--build-arg APP_ENV=$(app_var)'
 
           - task: Docker@2
             displayName: 'Push Docker Image'
