--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ stages:
   jobs:
   - job: Build
     displayName: Build
-    pool: agentName
+    pool: $(agentName)
 
     steps:
     - task: Docker@2
