azure file - build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ resources:
 - repo: self
 
 variables:
-  - group: "CICD"
+  - group: "CICD2"
   - name: app_var
     value: $[variables.appVariable]
 parameters:
