azure file - build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ stages:
         command: build
         repository: ${{ parameters.imageName }}
         dockerfile: '**/qa.dockerfile'
-        tags: ${{ parameters.tag }}
+        tags: | 
+          ${{ parameters.tag }}
         arguments: '--build-arg APP_ENV=$(app_var)'
         # containerRegistry: 'registryConnection'
