--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,6 @@ stages:
         command: build
         repository: ${{ parameters.imageName }}
         dockerfile: '**/qa.dockerfile'
-        tags: | 
-          ${{ parameters.tag }}
+        tags: ${{ parameters.tag }}
         arguments: '--build-arg APP_ENV=$(app_var)'
         # containerRegistry: 'registryConnection'
