azure file - build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,12 @@ stages:
         tags: ${{ parameters.tag }}
         arguments: '--build-arg APP_ENV=$(app_var)'
         # containerRegistry: 'registryConnection'
+
+    - task: Docker@2
+      displayName: Push
+      inputs:
+        command: push
+        # containerRegistry: 'registryConnection'
+        repository: ${{ parameters.imageName }}
+        tags: ${{ parameters.tag }}
+
