--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,10 @@ variables:
   - group: "CICD2"
   - name: app_var
     value: $[variables.appVariable]
+  - name: acrUsername
+    value: $[variables.appVariable]
+  - name: acrPassword
+    value: $[variables.appVariable]
 parameters:
   - name: tag
     default: "$(Build.BuildId)"
@@ -50,4 +54,15 @@ stages:
     pool: local-agent
     steps: 
       - script: echo "Deploying..."
+      - task: AzureContainerApps@1
+        inputs:
+          azureSubscription: appDeployConnection
+          imageToDeploy: acrapps2.azurecr.io/${{ parameters.imageName }}:${{ parameters.tag }}
+
+          containerAppName: app-public-api-carlos
+          resourceGroup: RG-Terraform
+
+          acrUsername: $(acrUsername)
+          acrPassword: $(acrPassword)
+
 
